@@ -24,6 +24,45 @@
 //hexdump -C archivo.bin |cut -d ' ' -f2-|cut -d '|' -f1|sed 's/  / /g'|cut -d ' ' -f2-|sed 's/ $/,/'|sed 's/ /,0x/g'|sed 's/^/0x/'
 
 
+//Charset de zx81, con ordenacion codigos no ascii (el de zx81). 64 caracteres
+unsigned char char_set_zx81_no_ascii[]={
+
+0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xf0,0xf0,0xf0,0xf0,0x00,0x00,0x00,0x00,
+0x0f,0x0f,0x0f,0x0f,0x00,0x00,0x00,0x00,0xff,0xff,0xff,0xff,0x00,0x00,0x00,0x00,
+0x00,0x00,0x00,0x00,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,
+0x0f,0x0f,0x0f,0x0f,0xf0,0xf0,0xf0,0xf0,0xff,0xff,0xff,0xff,0xf0,0xf0,0xf0,0xf0,
+0xaa,0x55,0xaa,0x55,0xaa,0x55,0xaa,0x55,0x00,0x00,0x00,0x00,0xaa,0x55,0xaa,0x55,
+0xaa,0x55,0xaa,0x55,0x00,0x00,0x00,0x00,0x00,0x24,0x24,0x00,0x00,0x00,0x00,0x00,
+0x00,0x1c,0x22,0x78,0x20,0x20,0x7e,0x00,0x00,0x08,0x3e,0x28,0x3e,0x0a,0x3e,0x08,
+0x00,0x00,0x00,0x10,0x00,0x00,0x10,0x00,0x00,0x3c,0x42,0x04,0x08,0x00,0x08,0x00,
+0x00,0x04,0x08,0x08,0x08,0x08,0x04,0x00,0x00,0x20,0x10,0x10,0x10,0x10,0x20,0x00,
+0x00,0x00,0x10,0x08,0x04,0x08,0x10,0x00,0x00,0x00,0x04,0x08,0x10,0x08,0x04,0x00,
+0x00,0x00,0x00,0x3e,0x00,0x3e,0x00,0x00,0x00,0x00,0x08,0x08,0x3e,0x08,0x08,0x00,
+0x00,0x00,0x00,0x00,0x3e,0x00,0x00,0x00,0x00,0x00,0x14,0x08,0x3e,0x08,0x14,0x00,
+0x00,0x00,0x02,0x04,0x08,0x10,0x20,0x00,0x00,0x00,0x10,0x00,0x00,0x10,0x10,0x20,
+0x00,0x00,0x00,0x00,0x00,0x08,0x08,0x10,0x00,0x00,0x00,0x00,0x00,0x18,0x18,0x00,
+0x00,0x3c,0x46,0x4a,0x52,0x62,0x3c,0x00,0x00,0x18,0x28,0x08,0x08,0x08,0x3e,0x00,
+0x00,0x3c,0x42,0x02,0x3c,0x40,0x7e,0x00,0x00,0x3c,0x42,0x0c,0x02,0x42,0x3c,0x00,
+0x00,0x08,0x18,0x28,0x48,0x7e,0x08,0x00,0x00,0x7e,0x40,0x7c,0x02,0x42,0x3c,0x00,
+0x00,0x3c,0x40,0x7c,0x42,0x42,0x3c,0x00,0x00,0x7e,0x02,0x04,0x08,0x10,0x10,0x00,
+0x00,0x3c,0x42,0x3c,0x42,0x42,0x3c,0x00,0x00,0x3c,0x42,0x42,0x3e,0x02,0x3c,0x00,
+0x00,0x3c,0x42,0x42,0x7e,0x42,0x42,0x00,0x00,0x7c,0x42,0x7c,0x42,0x42,0x7c,0x00,
+0x00,0x3c,0x42,0x40,0x40,0x42,0x3c,0x00,0x00,0x78,0x44,0x42,0x42,0x44,0x78,0x00,
+0x00,0x7e,0x40,0x7c,0x40,0x40,0x7e,0x00,0x00,0x7e,0x40,0x7c,0x40,0x40,0x40,0x00,
+0x00,0x3c,0x42,0x40,0x4e,0x42,0x3c,0x00,0x00,0x42,0x42,0x7e,0x42,0x42,0x42,0x00,
+0x00,0x3e,0x08,0x08,0x08,0x08,0x3e,0x00,0x00,0x02,0x02,0x02,0x42,0x42,0x3c,0x00,
+0x00,0x44,0x48,0x70,0x48,0x44,0x42,0x00,0x00,0x40,0x40,0x40,0x40,0x40,0x7e,0x00,
+0x00,0x42,0x66,0x5a,0x42,0x42,0x42,0x00,0x00,0x42,0x62,0x52,0x4a,0x46,0x42,0x00,
+0x00,0x3c,0x42,0x42,0x42,0x42,0x3c,0x00,0x00,0x7c,0x42,0x42,0x7c,0x40,0x40,0x00,
+0x00,0x3c,0x42,0x42,0x52,0x4a,0x3c,0x00,0x00,0x7c,0x42,0x42,0x7c,0x44,0x42,0x00,
+0x00,0x3c,0x40,0x3c,0x02,0x42,0x3c,0x00,0x00,0xfe,0x10,0x10,0x10,0x10,0x10,0x00,
+0x00,0x42,0x42,0x42,0x42,0x42,0x3c,0x00,0x00,0x42,0x42,0x42,0x42,0x24,0x18,0x00,
+0x00,0x42,0x42,0x42,0x42,0x5a,0x24,0x00,0x00,0x42,0x24,0x18,0x18,0x24,0x42,0x00,
+0x00,0x82,0x44,0x28,0x10,0x10,0x10,0x00,0x00,0x7e,0x04,0x08,0x10,0x20,0x7e,0x00
+
+};
+
+
 
 unsigned char char_set_spectrum[]={		0
 	,	0
